--- a/css/homepage.css
+++ b/css/homepage.css
@@ -8,7 +8,7 @@
 .main {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url('bgbg.jpg');
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url('../assets/images/bgbg.jpg');
     background-position: center;
     background-size: cover;
     color: #f3eff5;
@@ -36,7 +36,7 @@ nav {
 .logoname{
     font-family: 'Hahmlet', serif;
     font-size: 25px;
-    color: #E0E6ED;
+    color: #ececec;
 
 }
 
@@ -51,7 +51,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #f3eff5;
+    color: #ececec;
     transition: 0.3s;
 }
 
@@ -61,8 +61,8 @@ nav ul li a.active, nav ul li a:hover {
 
 .btn-login {
     padding: 10px 30px;
-    background: #02253B;
-    color: #f3eff5;
+    background: #596272;
+    color: #ececec;
     border: none;
     border-radius: 10px;
     cursor: pointer;
@@ -81,22 +81,22 @@ nav ul li a.active, nav ul li a:hover {
 .hero-content h1 {
     font-size: 85px;
     margin-bottom: 20px;
-    color: #E0E6ED;
+    color: #ececec;
 }
 
 .hero-content p {
     font-size: 18px;
     line-height: 1.6;
     margin-bottom: 30px;
-    color: #ddd;
+    color: #ececec;
     padding-left: 5px;
 }
 
 .btn-read {
     display: inline-block;
     padding: 15px 35px;
-    background: #02253B;
-    color: white;
+    background: #596272;
+    color: #ececec;
     text-decoration: none;
     border-radius: 25px;
     font-size: 18px;
